feat: add local query param to force execution on local db
